// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scale snapshot renders 1`] = `
<div>
  <div>
    <div
      class="css-ye0dkf"
    >
      <div
        class="css-rqetng"
        height="100px"
      >
        <div
          class="css-13nr7ki"
        >
          <div
            class="css-xr034w"
          >
            <div>
              Scale 
              1
            </div>
            <div>
              <button
                aria-controls="long-menu"
                aria-haspopup="true"
                aria-label="more"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-154kngp-MuiButtonBase-root-MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="MoreVertIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2m0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="css-1xunb8w"
          style="width: 320px;"
        >
          <div
            class="css-zg2680"
          >
            <div
              class="css-17o3yfn"
            >
              Standard(s)
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          style="display: flex;"
        >
          <div
            class="css-1jqtxcx"
          >
            <div
              class="css-2dklvx"
            >
              <button
                aria-controls="long-menu"
                aria-haspopup="true"
                aria-label="more"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-1380s6h-MuiButtonBase-root-MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="MoreVertIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2m0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
                  />
                </svg>
              </button>
            </div>
            <div
              class="css-1o276k3"
            >
              <div
                class="css-nq8ddj"
              >
                <div>
                  EditableHtml
                </div>
              </div>
            </div>
          </div>
          <div
            class="css-1xunb8w"
            style="width: 320px;"
          >
            <div
              class="css-zg2680"
            >
              <div
                class="css-1o276k3"
              >
                <div>
                  EditableHtml
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-10fbyu3"
        style="display: none; width: 108px; left: 200px;"
      >
        <div
          class="css-1dnwk3o"
          style="display: none; width: 108px; height: 100px; left: 0px;"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="ArrowBackIosIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.67 3.87 9.9 2.1 0 12l9.9 9.9 1.77-1.77L3.54 12z"
            />
          </svg>
        </div>
      </div>
      <div
        class="css-10fbyu3"
        style="display: none; width: 108px;"
      >
        <div
          class="css-1dnwk3o"
          style="display: none; width: 108px; height: 100px; left: 0px;"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="ArrowForwardIosIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6.23 20.23 8 22l10-10L8 2 6.23 3.77 14.46 12z"
            />
          </svg>
        </div>
      </div>
      <div
        class="css-jupokc"
      >
        <strong>
          +
        </strong>
        <div>
          <div>
            Add Category
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Scale snapshot renders with drag and drop enabled 1`] = `
<div>
  <div>
    <div
      class="css-ye0dkf"
    >
      <div
        class="css-rqetng"
        height="100px"
      >
        <div
          class="css-13nr7ki"
        >
          <div
            class="css-xr034w"
          >
            <div>
              Scale 
              1
            </div>
            <div>
              <button
                aria-controls="long-menu"
                aria-haspopup="true"
                aria-label="more"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-154kngp-MuiButtonBase-root-MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="MoreVertIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2m0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="css-1xunb8w"
          style="width: 320px;"
        >
          <div
            class="css-zg2680"
          >
            <div
              class="css-17o3yfn"
            >
              Standard(s)
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          style="display: flex;"
        >
          <div
            class="css-1jqtxcx"
          >
            <div
              class="css-2dklvx"
            >
              <button
                aria-controls="long-menu"
                aria-haspopup="true"
                aria-label="more"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-1380s6h-MuiButtonBase-root-MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="MoreVertIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2m0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
                  />
                </svg>
              </button>
            </div>
            <div
              class="css-1o276k3"
            >
              <div
                class="css-nq8ddj"
              >
                <div>
                  EditableHtml
                </div>
              </div>
            </div>
          </div>
          <div
            class="css-1xunb8w"
            style="width: 320px;"
          >
            <div
              class="css-zg2680"
            >
              <div
                class="css-1o276k3"
              >
                <div>
                  EditableHtml
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-10fbyu3"
        style="display: none; width: 108px; left: 200px;"
      >
        <div
          class="css-1dnwk3o"
          style="display: none; width: 108px; height: 100px; left: 0px;"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="ArrowBackIosIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.67 3.87 9.9 2.1 0 12l9.9 9.9 1.77-1.77L3.54 12z"
            />
          </svg>
        </div>
      </div>
      <div
        class="css-10fbyu3"
        style="display: none; width: 108px;"
      >
        <div
          class="css-1dnwk3o"
          style="display: none; width: 108px; height: 100px; left: 0px;"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="ArrowForwardIosIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6.23 20.23 8 22l10-10L8 2 6.23 3.77 14.46 12z"
            />
          </svg>
        </div>
      </div>
      <div
        class="css-jupokc"
      >
        <strong>
          +
        </strong>
        <div>
          <div>
            Add Category
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Scale snapshot renders without descriptions 1`] = `
<div>
  <div>
    <div
      class="css-ye0dkf"
    >
      <div
        class="css-rqetng"
        height="100px"
      >
        <div
          class="css-13nr7ki"
        >
          <div
            class="css-xr034w"
          >
            <div>
              Scale 
              1
            </div>
            <div>
              <button
                aria-controls="long-menu"
                aria-haspopup="true"
                aria-label="more"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-154kngp-MuiButtonBase-root-MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="MoreVertIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2m0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="css-1xunb8w"
          style="width: 320px;"
        >
          <div
            class="css-zg2680"
          >
            <div
              class="css-17o3yfn"
            >
              Standard(s)
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          style="display: flex;"
        >
          <div
            class="css-1jqtxcx"
          >
            <div
              class="css-2dklvx"
            >
              <button
                aria-controls="long-menu"
                aria-haspopup="true"
                aria-label="more"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-1380s6h-MuiButtonBase-root-MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="MoreVertIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2m0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
                  />
                </svg>
              </button>
            </div>
            <div
              class="css-1o276k3"
            >
              <div
                class="css-nq8ddj"
              >
                <div>
                  EditableHtml
                </div>
              </div>
            </div>
          </div>
          <div
            class="css-1xunb8w"
            style="width: 320px;"
          >
            <div
              class="css-zg2680"
            >
              <div
                class="css-1o276k3"
              >
                <div>
                  EditableHtml
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-10fbyu3"
        style="display: none; width: 108px; left: 200px;"
      >
        <div
          class="css-1dnwk3o"
          style="display: none; width: 108px; height: 100px; left: 0px;"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="ArrowBackIosIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.67 3.87 9.9 2.1 0 12l9.9 9.9 1.77-1.77L3.54 12z"
            />
          </svg>
        </div>
      </div>
      <div
        class="css-10fbyu3"
        style="display: none; width: 108px;"
      >
        <div
          class="css-1dnwk3o"
          style="display: none; width: 108px; height: 100px; left: 0px;"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="ArrowForwardIosIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6.23 20.23 8 22l10-10L8 2 6.23 3.77 14.46 12z"
            />
          </svg>
        </div>
      </div>
      <div
        class="css-jupokc"
      >
        <strong>
          +
        </strong>
        <div>
          <div>
            Add Category
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Scale snapshot renders without standards 1`] = `
<div>
  <div>
    <div
      class="css-ye0dkf"
    >
      <div
        class="css-rqetng"
        height="100px"
      >
        <div
          class="css-13nr7ki"
        >
          <div
            class="css-xr034w"
          >
            <div>
              Scale 
              1
            </div>
            <div>
              <button
                aria-controls="long-menu"
                aria-haspopup="true"
                aria-label="more"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-154kngp-MuiButtonBase-root-MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="MoreVertIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2m0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="css-1xunb8w"
          style="width: 320px;"
        />
      </div>
      <div>
        <div
          style="display: flex;"
        >
          <div
            class="css-1jqtxcx"
          >
            <div
              class="css-2dklvx"
            >
              <button
                aria-controls="long-menu"
                aria-haspopup="true"
                aria-label="more"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-1380s6h-MuiButtonBase-root-MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="MoreVertIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2m0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
                  />
                </svg>
              </button>
            </div>
            <div
              class="css-1o276k3"
            >
              <div
                class="css-nq8ddj"
              >
                <div>
                  EditableHtml
                </div>
              </div>
            </div>
          </div>
          <div
            class="css-1xunb8w"
            style="width: 320px;"
          />
        </div>
      </div>
      <div
        class="css-10fbyu3"
        style="display: none; width: 108px; left: 200px;"
      >
        <div
          class="css-1dnwk3o"
          style="display: none; width: 108px; height: 100px; left: 0px;"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="ArrowBackIosIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.67 3.87 9.9 2.1 0 12l9.9 9.9 1.77-1.77L3.54 12z"
            />
          </svg>
        </div>
      </div>
      <div
        class="css-10fbyu3"
        style="display: none; width: 108px;"
      >
        <div
          class="css-1dnwk3o"
          style="display: none; width: 108px; height: 100px; left: 0px;"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="ArrowForwardIosIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6.23 20.23 8 22l10-10L8 2 6.23 3.77 14.46 12z"
            />
          </svg>
        </div>
      </div>
      <div
        class="css-jupokc"
      >
        <strong>
          +
        </strong>
        <div>
          <div>
            Add Category
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Scale snapshot renders without traits 1`] = `
<div>
  <div>
    <div
      class="css-ye0dkf"
    >
      <div
        class="css-rqetng"
        height="100px"
      >
        <div
          class="css-13nr7ki"
        >
          <div
            class="css-xr034w"
          >
            <div>
              Scale 
              1
            </div>
            <div>
              <button
                aria-controls="long-menu"
                aria-haspopup="true"
                aria-label="more"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-154kngp-MuiButtonBase-root-MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="MoreVertIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2m0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="css-1xunb8w"
          style="width: 320px;"
        >
          <div
            class="css-zg2680"
          >
            <div
              class="css-17o3yfn"
            >
              Standard(s)
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          style="display: flex;"
        >
          <div
            class="css-1jqtxcx"
          >
            <div
              class="css-2dklvx"
            >
              <button
                aria-controls="long-menu"
                aria-haspopup="true"
                aria-label="more"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-1380s6h-MuiButtonBase-root-MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="MoreVertIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2m0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
                  />
                </svg>
              </button>
            </div>
            <div
              class="css-1o276k3"
            >
              <div
                class="css-nq8ddj"
              >
                <div>
                  EditableHtml
                </div>
              </div>
            </div>
          </div>
          <div
            class="css-1xunb8w"
            style="width: 320px;"
          >
            <div
              class="css-zg2680"
            >
              <div
                class="css-1o276k3"
              >
                <div>
                  EditableHtml
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-10fbyu3"
        style="display: none; width: 108px; left: 200px;"
      >
        <div
          class="css-1dnwk3o"
          style="display: none; width: 108px; height: 100px; left: 0px;"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="ArrowBackIosIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.67 3.87 9.9 2.1 0 12l9.9 9.9 1.77-1.77L3.54 12z"
            />
          </svg>
        </div>
      </div>
      <div
        class="css-10fbyu3"
        style="display: none; width: 108px;"
      >
        <div
          class="css-1dnwk3o"
          style="display: none; width: 108px; height: 100px; left: 0px;"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="ArrowForwardIosIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6.23 20.23 8 22l10-10L8 2 6.23 3.77 14.46 12z"
            />
          </svg>
        </div>
      </div>
      <div
        class="css-jupokc"
      >
        <strong>
          +
        </strong>
        <div>
          <div>
            Add Category
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
